--- a/po/sv.po
+++ b/po/sv.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-31 20:32+0200\n"
+"PO-Revision-Date: 2011-07-31 20:42+0200\n"
 "Last-Translator:  <stefan@inkopsforum.se>\n"
 "Language-Team: swedish <sv@li.org>\n"
 "Language: sv\n"
@@ -9930,6 +9930,17 @@ msgid ""
 "statistics from the logs helping you find what caused the\n"
 "        activity spike.</p>"
 msgstr ""
+"<b> Använda monitorn: </b><br/>\n"
+"  Ok, du är klar stt sätta igång! När du klickar på \"Start monitor\" kommer "
+"webbläsaren uppdatera alla visade diagram \n"
+"  med jämna mellanrum. Du kan lägga till diagram och ändra "
+"uppdateringsfrekvensen under \"Inställningar\", eller ta bort diagram \n"
+"  med tyngdpunkten ikonen på respektive diagram. \n"
+"  <p> När du får en plötslig topp i akviviteten, ävlj önskad tidsperiod på "
+"önskadt diagram genom att hålla ner \n"
+"  vänster musknapp och panorera över diagrammet. Detta kommer ladda "
+"statistik från loggarna vilka hjälper dig att hitta vad som orsakade \n"
+"  aktivitetstopp. </ p>"
 
 #: server_status.php:1383
 msgid ""
