--- a/po/sv.po
+++ b/po/sv.po
@@ -4,13 +4,13 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-30 14:14-0400\n"
-"PO-Revision-Date: 2011-07-31 20:58+0200\n"
+"PO-Revision-Date: 2011-07-31 21:13+0200\n"
 "Last-Translator:  <stefan@inkopsforum.se>\n"
 "Language-Team: swedish <sv@li.org>\n"
+"Language: sv\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: sv\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.0.5\n"
 
@@ -9952,10 +9952,9 @@ msgstr ""
 "behövs längre. \n"
 
 #: server_status.php:1385
-#, fuzzy
 #| msgid "Usage"
 msgid "CPU Usage"
-msgstr "Användning"
+msgstr "CPU Användning"
 
 #: server_status.php:1388
 msgid "Memory Usage"
