--- a/po/sv.po
+++ b/po/sv.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-30 14:14-0400\n"
-"PO-Revision-Date: 2011-07-31 21:13+0200\n"
+"PO-Revision-Date: 2011-07-31 21:14+0200\n"
 "Last-Translator:  <stefan@inkopsforum.se>\n"
 "Language-Team: swedish <sv@li.org>\n"
 "Language: sv\n"
@@ -9961,10 +9961,9 @@ msgid "Memory Usage"
 msgstr "Minnesanvändning"
 
 #: server_status.php:1391
-#, fuzzy
 #| msgid "Usage"
 msgid "Swap Usage"
-msgstr "Användning"
+msgstr "Swap användning"
 
 #: server_status.php:1394
 #, fuzzy
