--- a/po/sv.po
+++ b/po/sv.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-30 14:14-0400\n"
-"PO-Revision-Date: 2011-07-31 21:15+0200\n"
+"PO-Revision-Date: 2011-07-31 21:16+0200\n"
 "Last-Translator:  <stefan@inkopsforum.se>\n"
 "Language-Team: swedish <sv@li.org>\n"
 "Language: sv\n"
@@ -9980,10 +9980,9 @@ msgid "Commonly monitored"
 msgstr "Vanligen övervakade"
 
 #: server_status.php:1413
-#, fuzzy
 #| msgid "You must provide a routine name"
 msgid "or type variable name:"
-msgstr "Du måste ange ett rutinnamn"
+msgstr "eller skriv ett variabelnamn:"
 
 #: server_status.php:1417
 msgid "Display as differential value"
