--- a/po/sv.po
+++ b/po/sv.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-30 14:14-0400\n"
-"PO-Revision-Date: 2011-07-31 21:16+0200\n"
+"PO-Revision-Date: 2011-07-31 21:17+0200\n"
 "Last-Translator:  <stefan@inkopsforum.se>\n"
 "Language-Team: swedish <sv@li.org>\n"
 "Language: sv\n"
@@ -10006,10 +10006,9 @@ msgid "Clear series"
 msgstr "Rensa serier"
 
 #: server_status.php:1437
-#, fuzzy
 #| msgid "Series:"
 msgid "Series in Chart:"
-msgstr "Serie:"
+msgstr "Serier i diagram:"
 
 #: server_status.php:1445
 #, fuzzy
