--- a/po/sv.po
+++ b/po/sv.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-30 14:14-0400\n"
-"PO-Revision-Date: 2011-07-31 21:18+0200\n"
+"PO-Revision-Date: 2011-07-31 21:19+0200\n"
 "Last-Translator:  <stefan@inkopsforum.se>\n"
 "Language-Team: swedish <sv@li.org>\n"
 "Language: sv\n"
@@ -10042,10 +10042,9 @@ msgstr ""
 "grupperas efter frågetexten."
 
 #: server_status.php:1465
-#, fuzzy
 #| msgid "Query type"
 msgid "Query analyzer"
-msgstr "Fråge-typ"
+msgstr "Fråge analyserare"
 
 #: server_status.php:1501
 #, php-format
