--- a/po/fr.po
+++ b/po/fr.po
@@ -4,13 +4,13 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-30 14:14-0400\n"
-"PO-Revision-Date: 2011-07-29 16:58+0200\n"
+"PO-Revision-Date: 2011-08-01 12:38+0200\n"
 "Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: french <fr@li.org>\n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: fr\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 "X-Generator: Pootle 2.0.5\n"
 
@@ -1342,6 +1342,10 @@ msgid ""
 "However only the SQL query itself has been used as a grouping criteria, so "
 "the other attributes of queries, such as start time, may differ."
 msgstr ""
+"Cette colonne montre le nombre de requêtes identiques qui sont regroupées. "
+"Cependant, seulement le texte SQL de la requête a été utilisé comme critère "
+"de regroupement, donc les autres propriétés des requêtes, comme l'heure de "
+"début, peuvent différer."
 
 #: js/messages.php:144
 msgid ""
