--- a/po/ja.po
+++ b/po/ja.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-11 15:11+0200\n"
-"PO-Revision-Date: 2011-08-11 16:17+0200\n"
+"PO-Revision-Date: 2011-08-11 16:19+0200\n"
 "Last-Translator: Yuichiro <yuichiro@pop07.odn.ne.jp>\n"
 "Language-Team: japanese <jp@li.org>\n"
 "Language: ja\n"
@@ -6301,7 +6301,7 @@ msgstr ""
 
 #: libraries/export/sql.php:329 libraries/export/xml.php:44
 msgid "Procedures"
-msgstr "プロシジャ"
+msgstr "プロシージャ"
 
 #: libraries/export/sql.php:346 libraries/export/xml.php:39
 msgid "Functions"
