--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-11 15:11+0200\n"
-"PO-Revision-Date: 2011-08-11 17:00+0200\n"
+"PO-Revision-Date: 2011-08-11 17:01+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -1463,10 +1463,9 @@ msgid "Analyse Query"
 msgstr "Sorguyu Çözümle"
 
 #: js/messages.php:189
-#, fuzzy
 #| msgid "Advisor"
 msgid "Advisor system"
-msgstr "Danışman"
+msgstr "Danışman sistemi"
 
 #: js/messages.php:190
 msgid "Possible performance issues"
