--- a/po/tr.po
+++ b/po/tr.po
@@ -11552,10 +11552,9 @@ msgid "log_slow_queries is set to 'OFF'"
 msgstr ""
 
 #: po/advisory_rules.php:35
-#, fuzzy
 #| msgid "Clear series"
 msgid "Release Series"
-msgstr "Diziyi temizle"
+msgstr "Diziyi Yayımla"
 
 #: po/advisory_rules.php:36
 msgid "The MySQL server version less then 5.1."
