--- a/po/tr.po
+++ b/po/tr.po
@@ -11629,10 +11629,9 @@ msgid "'percona' found in version_comment"
 msgstr ""
 
 #: po/advisory_rules.php:60
-#, fuzzy
 #| msgid "MySQL charset"
 msgid "MySQL Architecture"
-msgstr "MySQL karakter grubu"
+msgstr "MySQL Yapısı"
 
 #: po/advisory_rules.php:61
 msgid "MySQL is not compiled as a 64-bit package."
