--- a/po/tr.po
+++ b/po/tr.po
@@ -11713,10 +11713,9 @@ msgid "The current query cache hit rate of %s%% is below 20%%"
 msgstr ""
 
 #: po/advisory_rules.php:80
-#, fuzzy
 #| msgid "Query cache"
 msgid "Query Cache usage"
-msgstr "Sorgu önbelleği"
+msgstr "Sorgu Önbelleği kullanımı"
 
 #: po/advisory_rules.php:81
 #, php-format
