--- a/po/tr.po
+++ b/po/tr.po
@@ -11813,10 +11813,9 @@ msgid "Current query cache size: %s"
 msgstr ""
 
 #: po/advisory_rules.php:100
-#, fuzzy
 #| msgid "Query results"
 msgid "Query cache min result size"
-msgstr "Sorgu sonuçları"
+msgstr "Sorgu önbelleği en az sonuç boyutu"
 
 #: po/advisory_rules.php:101
 msgid ""
