--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-11 15:11+0200\n"
-"PO-Revision-Date: 2011-08-11 17:53+0200\n"
+"PO-Revision-Date: 2011-08-11 17:54+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -11899,10 +11899,9 @@ msgid "rate of joins without indexes"
 msgstr ""
 
 #: po/advisory_rules.php:121
-#, fuzzy
 #| msgid "There are no routines to display."
 msgid "There are too many joins without indexes."
-msgstr "Görüntülemek için yordamlar yok."
+msgstr "İndeksler olmadan çok fazla katılım var."
 
 #: po/advisory_rules.php:122
 msgid ""
