--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-11 15:11+0200\n"
-"PO-Revision-Date: 2011-08-11 17:57+0200\n"
+"PO-Revision-Date: 2011-08-11 17:58+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -12171,10 +12171,9 @@ msgid "rate of open files"
 msgstr "açık dosyaların oranı"
 
 #: po/advisory_rules.php:186
-#, fuzzy
 #| msgid "The number of pending log file fsyncs."
 msgid "The rate of opening files is high."
-msgstr "Bekleyen günlük dosyası fsyncs sayısıdır."
+msgstr "Açılan dosyaların oranı yüksek."
 
 #: po/advisory_rules.php:188
 #, php-format
