--- a/po/sl.po
+++ b/po/sl.po
@@ -1160,10 +1160,9 @@ msgid "Total memory"
 msgstr "Skupni pomnilnik"
 
 #: js/messages.php:101
-#, fuzzy
 #| msgid "System memory"
 msgid "Cached memory"
-msgstr "Sistemski pomnilnik"
+msgstr "Predpomnjen pomnilnik"
 
 #: js/messages.php:102
 #, fuzzy
