--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-11 15:11+0200\n"
-"PO-Revision-Date: 2011-08-11 18:17+0200\n"
+"PO-Revision-Date: 2011-08-11 18:18+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -1170,10 +1170,9 @@ msgid "Buffered memory"
 msgstr "Medpomnljen pomnilnik"
 
 #: js/messages.php:103
-#, fuzzy
 #| msgid "System memory"
 msgid "Free memory"
-msgstr "Sistemski pomnilnik"
+msgstr "Prost pomnilnik"
 
 #: js/messages.php:104
 #, fuzzy
