--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-11 15:11+0200\n"
-"PO-Revision-Date: 2011-08-11 18:21+0200\n"
+"PO-Revision-Date: 2011-08-11 18:22+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -1202,10 +1202,9 @@ msgid "Bytes sent"
 msgstr "Poslanih bajtov"
 
 #: js/messages.php:112
-#, fuzzy
 #| msgid "Received"
 msgid "Bytes received"
-msgstr "Prejeto"
+msgstr "Prejetih bajtov"
 
 #: js/messages.php:113 server_status.php:987
 msgid "Connections"
