--- a/po/ja.po
+++ b/po/ja.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-12 12:32+0200\n"
-"PO-Revision-Date: 2011-08-12 12:25+0200\n"
+"PO-Revision-Date: 2011-08-12 12:35+0200\n"
 "Last-Translator: Yuichiro <yuichiro@pop07.odn.ne.jp>\n"
 "Language-Team: japanese <jp@li.org>\n"
 "Language: ja\n"
@@ -10079,6 +10079,9 @@ msgid ""
 "table is supported by MySQL 5.1.6 and onwards. You may still use the server "
 "charting features however."
 msgstr ""
+"残念ながらお使いのデータベースサーバは、phpMyAdmin "
+"でデータベースのログを分析するために必要である、テーブルのログ機能をサポートしていません。テーブルのログ機能は、MySQL 5.1.6 "
+"以降でサポートされています。ですが、サーバのグラフモニタ機能は使用することができます。"
 
 #: server_status.php:1496
 msgid ""
